--- a/advisory.html
+++ b/advisory.html
@@ -77,7 +77,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          <p><img src="./img/1.jpg" alt="" style="filter: grayscale(50%);" class="img-responsive img-border"></p>
+          <p><img src="https://images.pexels.com/photos/669612/pexels-photo-669612.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="" style="filter: grayscale(50%);" class="img-responsive img-border"></p>
          
 
           <!-- <p><a href="https://uicookies.com/" target="_blank" role="button" class="btn btn-primary btn-sm">Visit Website</a></p> -->
@@ -91,7 +91,7 @@
           <h1 class="mb20">ADVISORY</h1>
           <p style="font-size:18px">We conduct PR audits to help you strengthen your strength. Additionally, the
             communications &amp; PR audit will avail advice on steps you need to hit improvement
-            targets. Alternatively, we can just review and validate your strategies, plans, reports,
+            targets.<br> Alternatively, we can just review and validate your strategies, plans, reports,
             processes and crisis communications.
             We have trainings to benefit non communications departments, senior leadership
             teams, boards.</p>
